--- a/style.css
+++ b/style.css
@@ -21,8 +21,67 @@
     justify-content: center; /*define the horizontal alignement*/
   }
   .menu {
-    border: 1px solid #fff;
+      /*This turns our .menu into a nested flex container, and the space-around value
+       spreads its items out across its entire width. */
+    border: 0px solid #fff;
     width: 900px;
     display: flex;
     justify-content: space-around;
+    /*The flex container automatically distributes 
+    extra horizontal space to either side of each item. */
+  }
+  .header-container {
+    color: #5995DA;
+    background-color: #D6E9FE;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .header {
+    width: 900px;
+    height: 300px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .subscribe {
+    border: 0px solid #5995DA;
+  }
+  .photo-grid-container {
+    display: flex;
+    justify-content: center;
+  }
+  
+  .photo-grid {
+    width: 900px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  
+  .photo-grid-item {
+    border: 1px solid #fff;
+    width: 300px;
+    height: 300px;
+  }
+  .social,
+  .subscribe {
+    align-self: flex-end;
+    margin-bottom: 20px;
+  }
+  .footer {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .footer-item {
+    border: 1px solid #fff;
+    background-color: #D6E9FE;
+    height: 200px;
+    flex: 1;
+  }
+  .footer-three, .footer-item{
+    flex: 1;
+    text-align: center;
+  
   }
